removed horizontal scrollbar, replaced BrowserRouter with HashRouter to fix github routing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
   min-height: 100vh;
-  min-width: 100vw
+  min-width: 100vw;
+  overflow-x: hidden; 
 }
